<resources>
    <string name="app_name">Nownews</string>
    <string name="usenameText">Email</string>
    <string name="passwordText">Password</string>
    <string name="conpassworedText">Confirm Password</string>
    <string name="signinText">Sign In</string>
    <string name="createaccountText">create account</string>
    <string name="needhelpText">need help?</string>
    <string name="title_activity_mainmenu">mainmenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
