<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">
    <!-- Main Laout with -->
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/Logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/logo"/>
        <!-- User inputs layout -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/MainLayoutTop"
            android:layout_marginLeft="@dimen/DefaultLayout"
            android:layout_marginRight="@dimen/DefaultLayout">

            <EditText
                android:id="@+id/usernameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usenameText"
                android:textColor="@color/white"
                android:typeface="sans" />
            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/DefaultLayout"
                android:hint="@string/passwordText"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:typeface="sans" />
            <Button
                android:id="@+id/signinBtn"
                android:layout_marginTop="@dimen/DefaultLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/orangeAppColor"
                android:textColor="@color/white"
                android:onClick="Login"
                android:text="@string/signinText"/>

            <LinearLayout
                android:layout_marginTop="@dimen/DefaultLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/createAccountBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="createAccount"
                    android:text="@string/createaccountText" />

                <TextView
                    android:id="@+id/needhelpBtn"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="needHelp"
                    android:text="@string/needhelpText" />
            </LinearLayout>
        </LinearLayout>
        <!-- End User inputs layout -->
    </LinearLayout>
    <!-- End Main Laout with -->
</RelativeLayout>
